Add home page above fold layout

--- a/_includes/footer/footer.scss
+++ b/_includes/footer/footer.scss
@@ -4,7 +4,7 @@
 .site-footer{
     position: relative;
     color:white;
-    background-color:$dark_green;
+    background-color:$footer-background;
     .footer-bg {
         min-height: 100px;
         position: absolute; 
