--- a/_sass/_vars.scss
+++ b/_sass/_vars.scss
@@ -26,7 +26,12 @@ $dark_green: rgb(62, 171, 62);
 
 $basic_grey: #e4e4e4;;
 
+// main background color
+
+$background-color:#ac7070;
+$footer-background:#725959;
 
 // responsive
 // nav breakpoint
 $nav-toggle:504px;
+
