--- a/home/home.scss
+++ b/home/home.scss
@@ -2,91 +2,52 @@
 // _includes/css/home/home.css
 @import "vars"; 
 .home-above-fold{
+	max-width:1500px;
 	#homeHeroImage{
-		max-height: 950px;
+		max-height: 750px;
 		overflow: hidden;
+		position:relative;
+
+		.hero-image{
+		
+		}
+		
+		.hero-image--left{
+			right:50%;
+			&::before{
+			content:'';
+			display:block;
+			position:absolute;
+			width:100%;
+			height:0;
+			padding-top:100%;
+
+			/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#fcfcfc+0,ffffff+100&0.36+0,0.19+100 */
+			background: radial-gradient(ellipse at center, rgba(252,252,252,0.36) 0%,rgba(255,255,255,0.19) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+			}
+			p{
+				position:relative;
+			}
+		}
+	
+		@media(min-width:700px){
+		.hero-image{
+			width:50%;
+			float:left;
+			position:relative;	
+		}
+		.hero-image--right{
+			left:50%;
+		}
+		.hero-image--left{
+			right:50%;
+		}
 	}
+	
+	}//#homeHeroImage
 
 }// .home-above-fold
 
 .home-page{
-	#services{
-		@media(min-width:1200px){
-			max-width:1200px;
-			position:relative;
-			top:-20px;
-		}
-		
-		margin:0 auto;
-		@media(min-width:761px){
-			display:flex;
-			flex-wrap: wrap;
-		}
-		div{
-			color:white;
-			@media(min-width:1071px){
-				width:33%;
-			}
-		}
-		h2{
-			color:inherit;
-			font-weight:200;
-			font-size:1.1em;
-		}
-		a.services-links{
-			color:inherit;
-			display:block;
-			height:100%;
-			border-left:5px solid;
-			padding: 1em;
-			@media(min-width:1071px){
-				&:before{
-					content:'';
-					float:left;
-					padding-top:80%;
-				}
-			}
-		}
-		ul{
-			list-style-type: none;
-			padding-left:1em;
-			margin-bottom:2em;
-			li{
-				position:relative;
-				margin:0;
-				padding-bottom: .8em;
-				&:before{
-					position:absolute;
-					left:-1em;
-					content: '✓';
-				}
-			}//li
-		}//ul
-		#crowns{
-			background-color: $dark_green;
-			@media(min-width:761px)and(max-width:1070px){
-				width:50%;
-			}
-		}
-		#ceramic{
-			background-color: $light_green;
-			@media(min-width:761px)and(max-width:1070px){
-				width:50%;
-			}
-		}
-		#implants{
-			background-color: $medium_green;
-			@media(min-width:761px)and(max-width:1070px){
-				width:100%;
-				text-align: center;
-				a{
-					display:inline-block;
-					border-left:none;
-					text-align:left;
-					
-				}
 
-			}
-		}
-	}//#services
 }//.home-page
