--- a/_sass/_vars.scss
+++ b/_sass/_vars.scss
@@ -31,6 +31,10 @@ $basic_grey: #e4e4e4;;
 $background-color:#ac7070;
 $footer-background:#725959;
 
+// navigation colors
+$nav-links-color:rgb(238, 238, 238);
+$nav-link-color-hover:white;
+
 // responsive
 // nav breakpoint
 $nav-toggle:504px;
