--- a/home/home.scss
+++ b/home/home.scss
@@ -2,35 +2,45 @@
 // _includes/css/home/home.css
 @import "vars"; 
 .home-above-fold{
-	max-width:1500px;
+
 	#homeHeroImage{
-		max-height: 750px;
-		overflow: hidden;
-		position:relative;
+
 
 		.hero-image{
-		
+		 overflow:hidden;
 		}
-		
-		.hero-image--left{
-			right:50%;
-			&::before{
-			content:'';
-			display:block;
-			position:absolute;
-			width:100%;
-			height:0;
-			padding-top:100%;
 
-			/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#fcfcfc+0,ffffff+100&0.36+0,0.19+100 */
-			background: radial-gradient(ellipse at center, rgba(252,252,252,0.36) 0%,rgba(255,255,255,0.19) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-			}
-			p{
-				position:relative;
-			}
+		.hero-image--left{
+			position: relative;
+			.guild-event{
+				position:absolute;
+				bottom:0px;
+				width: 50%;
+				margin-left: 31px;
+				margin-bottom: 20px;
+				p{
+					font-weight: 100;
+					color:rgb(194, 194, 194);
+					@media(min-width:600px)and(max-width:887px){
+						font-size:1.5rem;
+					}
+				}
+				a:hover{
+					color:white;
+				}
+				@media(max-width:425px){
+					width:90%;
+					margin-bottom: 2px;
+					p{
+						font-size:.9em;
+					}
+				}
+			}//.guild-event
 		}
 	
-		@media(min-width:700px){
+		@media(min-width:888px){
+		max-height: 750px;
+		overflow: hidden;
 		.hero-image{
 			width:50%;
 			float:left;
@@ -41,6 +51,7 @@
 		}
 		.hero-image--left{
 			right:50%;
+
 		}
 	}
 	
