add new logo change site color

--- a/_sass/_vars.scss
+++ b/_sass/_vars.scss
@@ -28,7 +28,7 @@ $basic_grey: #e4e4e4;;
 
 // main background color
 
-$background-color:#ac7070;
+$background-color:#2e0a09;
 $footer-background:#725959;
 
 // navigation colors
