--- a/_sass/global.scss
+++ b/_sass/global.scss
@@ -68,7 +68,7 @@ $a-tags-hover: 'a:active, a:hover';
 // layout
     // header
 .logo-width{
-    width:162px;
+    text-align:center;
 }
 
 .reading-width{
