Style the Hamburger for the sidebar toggle

--- a/_includes/navs/sidebar.scss
+++ b/_includes/navs/sidebar.scss
@@ -90,3 +90,10 @@
 
 }// #sidebar-nav
 
+.sidebar-trigger {
+    border: 1px solid;
+    padding: 10px;
+    border-radius: 5px;
+    background: black;
+    margin: 12px 22px;
+}
