--- a/_includes/navs/nav-default.html
+++ b/_includes/navs/nav-default.html
@@ -1,8 +1,8 @@
 {%- assign default_paths = site.pages | map: "path" -%}
 {%- assign page_paths = site.header_pages | default: default_paths -%}
 
-<div class="nav-wrapper box-shadow">
-        <div role="button" on="tap:header-sidebar.toggle" tabindex="0" class="sidebar-trigger">NAVIGATION☰</div>
+<div class="nav-wrapper box-shadow clearfix">
+        <div role="button" on="tap:header-sidebar.toggle" tabindex="0" class="sidebar-trigger right">☰</div>
 {%- if page_paths -%}
         <nav class="main-menu clearfix">
             <ul>
