--- a/_includes/head/head.html
+++ b/_includes/head/head.html
@@ -22,42 +22,13 @@
 		{%- endif -%}
 
 	</style>
+
 	 <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
+	 
 	 <script async src="https://cdn.ampproject.org/v0.js"></script>
 	 
-	{%- if page.amp-sidebar or site.amp-sidebar -%} 
-		<script custom-element="amp-sidebar" src="https://cdn.ampproject.org/v0/amp-sidebar-0.1.js" async></script>
-	{%- endif -%}
 
-	{%- if page.amp-accordion or site.amp-accordion -%} 
-		<script custom-element="amp-accordion" src="https://cdn.ampproject.org/v0/amp-accordion-0.1.js" async></script>
-	{%- endif -%}
-
-	{%- if page.amp-position-observer or site.amp-position-observer -%} 
-		<script async custom-element="amp-position-observer" src="https://cdn.ampproject.org/v0/amp-position-observer-0.1.js"></script>
-	{%- endif -%}
-
-	{%- if page.amp-animation or site.amp-animation -%} 
-		<script async custom-element="amp-animation" src="https://cdn.ampproject.org/v0/amp-animation-0.1.js"></script>
-	{%- endif -%}
-
-	{%- if page.amp-form or site.amp-form -%} 
-		<script async custom-element="amp-form" src="https://cdn.ampproject.org/v0/amp-form-0.1.js"></script>
-	{%- endif -%}
-
-	{%- if page.amp-soundcloud or site.amp-soundcloud -%} 
-	<script async custom-element="amp-soundcloud" src="https://cdn.ampproject.org/v0/amp-soundcloud-0.1.js"></script>
-	{%- endif -%}
-
-	
-	{%- if page.amp-lightbox or site.amp-lightbox -%} 
-		<script async custom-element="amp-lightbox" src="https://cdn.ampproject.org/v0/amp-lightbox-0.1.js"></script>
-	{%- endif -%}
-	
-	{%- if page.amp-bind or site.amp-bind -%} 
-		<script async custom-element="amp-bind" src="https://cdn.ampproject.org/v0/amp-bind-0.1.js"></script>
-	{%- endif -%}
-	
+	 {%- include head/amp-elements.html -%}
 	 
 	{%- include head/seo-group.html -%}
 	
